feat: more-cscify

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <link id="highlight-link" rel="stylesheet" href="vendor/hljs/styles/hybrid.min.css">
   <script src="vendor/remarkable/remarkable.min.js"></script>
 
-  <link rel="shortcut icon" type="image/png" href="favicon.png">
+  <link rel="shortcut icon" type="image/png" href="favicon.ico">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
       <div id="more-mobile-btns">
       </div>
     </div>
-    <div class="container" style="display: flex">
+    <div class="container">
       <form id="chatform" class="message">
         <textarea id="chatinput" type="text" autocomplete="off" spellcheck="false" autofocus></textarea>
       </form>
