--- a/src/rescue-mode.html
+++ b/src/rescue-mode.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HC++ Rescue Mode</title>
+    <title>CSC++ Rescue Mode</title>
 </head>
 <body style="padding: 4px; display: none;">
-    <h1>HC++ Rescue Mode</h1>
+    <h1>CSC++ Rescue Mode</h1>
     <hr>
     <h2>Quick Actions</h2>
     <button onclick="localStorage.clear();alert('Done.')">Clear localStorage</button></br>
